# smtp_discord_bridge

./: .gitignore  Cargo.toml  README.md  shell.nix
src/: config.rs  discord.rs  lib.rs  main.rs  smtp.rs
